--- a/features/apimgt/org.wso2.carbon.apimgt.core.feature/src/main/resources/conf_templates/templates/repository/conf/api-manager.xml.j2
+++ b/features/apimgt/org.wso2.carbon.apimgt.core.feature/src/main/resources/conf_templates/templates/repository/conf/api-manager.xml.j2
@@ -487,6 +487,13 @@
         {% if apim.oauth_config.enable_jwt_for_portals is defined %}
         <EnableJWTForPortals>{{apim.oauth_config.enable_jwt_for_portals}}</EnableJWTForPortals>
         {% endif %}
+
+        <EnableRetryCallWithNewToken>{{apim.oauth_config.enable_retry_call_with_new_token}}</EnableRetryCallWithNewToken>
+
+        <!-- These parameters are used to configure timeout values for the API calls make to the token endpoint -->
+        <EndpointConnectionTimeout>{{apim.oauth_config.token_endpoint.connection_timeout}}</EndpointConnectionTimeout>
+        <EndpointConnectionRequestTimeout>{{apim.oauth_config.token_endpoint.connection_request_timeout}}</EndpointConnectionRequestTimeout>
+        <EndpointSocketTimeout>{{apim.oauth_config.token_endpoint.socket_timeout}}</EndpointSocketTimeout>
     </OAuthConfigurations>
 
     <AccessTokenBinding>
@@ -1681,10 +1688,10 @@
      {% if apim.mediator_config.oauth is defined %}
       <MediatorConfigs>
         <OAuth>
-        <!-- If the access token expires, the server should reply with the duration of time the access token is granted for. -->
-                 <ExpiresIn>{{apim.mediator_config.oauth.expires_in}}</ExpiresIn>
-             </OAuth>
-          </MediatorConfigs>
+            <!-- If the access token expires, the server should reply with the duration of time the access token is granted for. -->
+            <ExpiresIn>{{apim.mediator_config.oauth.expires_in}}</ExpiresIn>
+        </OAuth>
+      </MediatorConfigs>
       {% endif %}
 
       <!-- Default Correlation Log Components -->
